# Quiz-Generator

./: README.md  pyproject.toml
mcqgenerator/: main.ipynb
src/: frontend.py  logic.py
